Fix/combine left/right items, fix spacing

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,7 +14,6 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   padding: 8px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -51,15 +50,13 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 15px;
 }
 
-.left-items {
+.left-items, .right-items {
   display: flex;
-  justify-content: flex-start;
-}
-
-.right-items {
-  display: flex;
-  justify-content: flex-end;
+  gap: 16px;
+  align-items: center;
 }
